public/analytics-pro/v0.9.0rc2/_sources/tutorials/error-measurement-basics.rst.txt
.. _Basics of error measurement:

Basics of error measurement
===========================

..
    Copyright Tumult Labs 2024. All rights reserved.
    This file is part of Tumult Analytics Pro.
    It may only be used, reproduced, modified or distributed pursuant to
    Tumult Labs' Enterprise License Agreement or another commercial license
    agreement entered into between you and Tumult Labs.
    No other rights are granted to use this file in any way.

.. note:: This tutorial uses features that are only available on a paid version of Tumult Analytics. If you would like to hear more, please contact us at info@tmlt.io.

In previous tutorials, we saw how to write differentially private queries using the Tumult Analytics API. Differential privacy adds noise to data, and also involves truncation, so before going ahead with publishing or sharing DP statistics, we typically want to evaluate how accurate these statistics are, and carefully select the parameters used in our Tumult Analytics program.

That's exactly what this tutorial series about error measurement and tuning is about. In this tutorial we will walk you through the first step of the process of measuring and optimizing error: converting a simple program to have a fixed structure, and evaluate its error. Let's get started!

Setup
-----

First, let's import the Python packages we will use, and download some sample data.

Throughout this tutorial section, we will use two tables: `members` contains information about the members of our fictional public library, and `nc-zip-codes` lists all the ZIP codes in North Carolina, where our library is located.

.. testcode::

    import matplotlib.pyplot as plt
    import os
    import pandas as pd
    import seaborn as sns

    from pyspark import SparkFiles
    from pyspark.sql import DataFrame, SparkSession
    from tmlt.analytics.keyset import KeySet
    from tmlt.analytics.privacy_budget import PureDPBudget
    from tmlt.analytics.protected_change import AddOneRow
    from tmlt.analytics.query_builder import QueryBuilder
    from tmlt.analytics.session import Session
    from tmlt.analytics.program import SessionProgram
    from tmlt.analytics.tuner._tuner import SessionProgramTuner, Tunable
    from tmlt.analytics.metrics._relative_error import MedianRelativeError

    spark = SparkSession.builder.getOrCreate()
    spark.sparkContext.addFile(
        "https://tumult-public.s3.amazonaws.com/demos/library/v2/members.csv"
    )
    members_df = spark.read.csv(
       SparkFiles.get("library-members.csv"), header=True, inferSchema=True
    )

    # ZIP code data is based on https://worldpopulationreview.com/zips/north-carolina
    spark.sparkContext.addFile(
        "https://tumult-public.s3.amazonaws.com/nc-zip-codes.csv"
    )
    nc_zip_codes_df = spark.read.csv(
        SparkFiles.get("nc-zip-codes.csv"), header=True, inferSchema=True
    )
    nc_zip_codes_df = nc_zip_codes_df.withColumnRenamed("Zip Code", "zip_code")
    nc_zip_codes_df = nc_zip_codes_df.withColumn("zip_code", nc_zip_codes_df.zip_code.cast('string'))
    nc_zip_codes_df = nc_zip_codes_df.fillna(0)

A simple query
--------------

Say we want to compute the number of books borrowed by users of our library, sliced by ZIP code.  We know how to do this, thanks to what we learned in previous tutorials. Below, we use two input Spark DataFrames: `members_df`, which contains a list of members of our fictional public library and information such as how many books each one borrowed, and `nc_zip_codes_df`, which contains a list of ZIP codes in North Carolina. The former needs to be protected, the second is public.

.. testcode::

    session = Session.from_dataframe(
        source_id="members",
        dataframe=members_df,
        protected_change=AddOneRow(),
        privacy_budget=PureDPBudget(epsilon=3),
    )

    zip_code_keys = KeySet.from_dataframe(nc_zip_codes_df.select("zip_code"))
    query = (
        QueryBuilder("members")
        .groupby(zip_code_keys)
        .sum("books_borrowed", low=0, high=500)
    )
    books_by_zip_code = session.evaluate(query, session.remaining_privacy_budget)

If we run this program, we get a DataFrame with noisy sums and we can use a visualization library to plot this into a nice map. Let's consider only top ten ZIP codes in which most books have been borrowed and display the noisy sums as a graph.

.. code-block::
    
    import matplotlib.pyplot as plt
    import seaborn as sns

    sns.set_theme(style="whitegrid")
    top_10_zipcodes = books_by_zip_code.orderBy(col("books_borrowed_sum").desc()).limit(10)
    data_to_plot = top_10_zipcodes.toPandas()

    g = sns.barplot(x="zip_code", y="books_borrowed_sum", data=data_to_plot, color="#1f77b4")
    g.set_xticklabels(
        data_to_plot["zip_code"], rotation=45, horizontalalignment="right"
    )
    plt.title("The ten ZIP codes in which most books have been borrowed")
    plt.xlabel("ZIP code")
    plt.ylabel("Total books borrowed")
    plt.tight_layout()
    plt.show()

.. image:: ../images/chart_total_books_borrowed_in_zipcodes.png
   :alt: A bar chart plotting the number of the number of books borrowed by users of our library, sliced by ZIP code.
   :align: center


However, it's hard to know how trustworthy these results are. Let's figure it out by computing the error of the above query. To get a sense of the "typical" error in these noisy statistics, we will compute the relative error for each zip code and then report the median value of those errors.

From Session to SessionProgram
------------------------------

To get an error report, we first need to convert our program to a :class:`~.SessionProgram` instead. It works similarly to a Session, but the operations are defined in the reverse order: first we will describe all the queries we want to run on the data, and then we will initialize a :class:`~.SessionProgram` with the data and the privacy guarantees we want to enforce.

.. testcode::

    class BooksByZipCodeProgram(SessionProgram):
        class ProtectedInputs:
            members: DataFrame
        class UnprotectedInputs:
            nc_zip_codes: DataFrame
        class Outputs:
            books_by_zip_code: DataFrame
        
        def session_interaction(self, session):
            nc_zip_codes_df = session.public_source_dataframes["nc_zip_codes"]
            nc_zip_code_keys = KeySet.from_dataframe(nc_zip_codes_df.select("zip_code"))
            query = (
                QueryBuilder("members")
                .groupby(nc_zip_code_keys)
                .sum("books_borrowed", low=0, high=500)
            )
            budget = session.remaining_privacy_budget
            return {"books_by_zip_code": session.evaluate(query, budget)}

Let's look at each part separately.

1. First, we declare our program as a Python class subclassing :class:`~.SessionProgram`. We indicate what are its inputs (the protected ones separately from the non-protected ones) and its outputs.
2. Second, we write our program logic inside a :meth:`~.session_interaction` method. This method takes a Session as argument, and uses it to evaluate queries as we previously did. It then returns a dictionary mapping each output name with the corresponding output DataFrame.

Initializing and running a SessionProgram
-----------------------------------------

The only way that a SessionProgram can process its input data is by interacting with a :class:`Session<tmlt.analytics.session.Session>` in the :meth:`~.session_interaction` method. Its privacy guarantee is exactly the same as a :class:`Session<tmlt.analytics.session.Session>`'s: the data is protected with fixed privacy guarantees upon initialization, using the same syntax as the Session; once initialized, it will enforce these privacy guarantees in all future interactions with it. Let's initialize our `BooksByZipCodeProgram`.

.. testcode::

    zip_code_program = (
        BooksByZipCodeProgram.Builder()
        .with_private_dataframe(
            source_id="members",
            dataframe=members_df,
            protected_change=AddOneRow()
        )
        .with_public_dataframe(
            source_id="nc_zip_codes",
            dataframe=nc_zip_codes_df,
        )
        .with_privacy_budget(PureDPBudget(3))
        .build()
    )

Once initialized, instead of calling queries on it like the Session, we run the whole program at once using the :meth:`~.run` method, and obtain the outputs with `outputs`.

.. testcode::

    zip_code_program.run()
    zip_code_program.outputs["books_by_zip_code"].show(10)


.. testoutput::
   :hide:
   :options: +NORMALIZE_WHITESPACE

    +--------+------------------+
    |zip_code|books_borrowed_sum|
    +--------+------------------+
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    |...|...|
    +--------+------------------+
    only showing top 10 rows



.. code-block::

    +--------+------------------+
    |zip_code|books_borrowed_sum|
    +--------+------------------+
    |   27006|               359|
    |   27007|              -218|
    |   27009|               477|
    |   27011|              -145|
    |   27012|               424|
    |   27013|                 8|
    |   27014|              -302|
    |   27016|               278|
    |   27017|              -322|
    |   27018|               274|
    +--------+------------------+
    only showing top 10 rows

One characteristic of a :class:`~.SessionProgram` is that it can only be run *once*: running it again is forbidden.

.. doctest::

    >>> zip_code_program.run()
    Traceback (most recent call last):
    ...
    RuntimeError: The SessionProgram has already been run. It can only be run once.

First look at error
-------------------

Now that we have clearly defined our program, and specified its inputs, outputs, and query logic, we can pass this information to the :class:`SessionProgramTuner<tmlt.analytics.tuner._tuner.SessionProgramTuner>` class, which is what gives us access to error reports.

Defining this Tuner works by subclassing the :class:`SessionProgramTuner<tmlt.analytics.tuner._tuner.SessionProgramTuner>` class, passing our program as a class argument. Tumult Analytics provides built-in metrics that we can use to measure the error of our program. To calculate median relative error, we instantiate the built-in metric :class:`MedianRelativeError<tmlt.analytics.metrics._relative_error.MedianRelativeError>` and include it in the list of metrics associated with the ``metrics`` class variable. This is what happens behind the scenes: one baseline table, one DP table; both are joined, then the numbers are compared. We need to specify on what column names we must do the join, and what column contains the numbers.

.. testcode::

    class SimpleTuner(SessionProgramTuner, program=BooksByZipCodeProgram):
        metrics = [
            MedianRelativeError(output="books_by_zip_code", measure_column="books_borrowed_sum", join_columns=["zip_code"]),
        ]

The :class:`SessionProgramTuner<tmlt.analytics.tuner._tuner.SessionProgramTuner>` can be initialized just like a Session, but **it does not provide any privacy guarantees**: error information is not differentially private! For this reason, it is a good practice to use different datasets for tuning and deployment — historical datasets or synthetic datasets are common choices.

.. testcode::

    simple_tuner = (
        SimpleTuner.Builder()
        .with_private_dataframe(
            source_id="members",
            dataframe=members_df,
            protected_change=AddOneRow()
        )
        .with_public_dataframe(
            source_id="nc_zip_codes",
            dataframe=nc_zip_codes_df,
        )
        .with_privacy_budget(PureDPBudget(3))
        .build()
    )

Now that our :class:`SessionProgramTuner<tmlt.analytics.tuner._tuner.SessionProgramTuner>` is initialized, we can get our very first error report by calling the :meth:`~tmlt.analytics.tuner._tuner.SessionProgramTuner.error_report` method.

.. testcode::

   error_report = simple_tuner.error_report()
   error_report.show()

.. testoutput::
   :hide:
   :options: +NORMALIZE_WHITESPACE

    Error report ran with budget PureDPBudget(epsilon=3) and no params.
    Metric results:
    - default: Median relative error for column books_borrowed_sum of table books_by_zip_code: ...

.. code-block::

    Error report ran with budget PureDPBudget(3) and no params. 
    Metric results:
    - default: Median relative error for column books_borrowed_sum of table books_by_zip_code: 0.333

We computed our first error metric!

You probably have lots of questions, like “how do I choose which metrics to use to quantify error”, or “how do I measure error with many parameters at once”, or “how do I determine what baseline is used behind the scenes to measure error”. Great news — that’s exactly the topic of the next tutorials in this series.